--- a/ClientsApp/ClientsApp.csproj
+++ b/ClientsApp/ClientsApp.csproj
@@ -52,7 +52,13 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
+		<MauiImage Update="Resources\Images\delete_cross_icon.svg">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</MauiImage>
 		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
+		<MauiImage Update="Resources\Images\edit_gear_icon.svg">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</MauiImage>
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -108,6 +114,18 @@
 
 	<ItemGroup>
 	  <PRIResource Remove="Platforms\Android\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Views\EditClientPage.xaml.cs">
+	    <DependentUpon>EditClientPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\EditClientPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
